syntax = "proto3";

package pb;

import "watchlist.proto";

option go_package = "github.com/jakub/aioportal/server/pb";


message GetWatchlistsResponse {
  repeated Watchlist Watchlists = 1;
}